--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ryc-7g-jLr"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="contacts" id="rbb-S2-arG"/>
+                    <tabBarItem key="tabBarItem" image="Icon_Tab1" id="rbb-S2-arG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZY-Es-E4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -60,7 +60,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KKd-aY-1pK"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="YmS-dA-bqw"/>
+                    <tabBarItem key="tabBarItem" image="Icon_Tab2" id="YmS-dA-bqw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKj-zz-w6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -99,7 +99,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Nm-Vz-ycl"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="qSe-CN-yNC"/>
+                    <tabBarItem key="tabBarItem" image="Icon_Tab3" id="qSe-CN-yNC">
+                        <inset key="imageInsets" minX="0.0" minY="-25" maxX="0.0" maxY="0.0"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhM-lM-3UP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -127,7 +129,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Z8S-Ck-JCg"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="history" id="WPu-zu-L15"/>
+                    <tabBarItem key="tabBarItem" image="Icon_Tab4" id="WPu-zu-L15"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Quv-eE-nbb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -155,16 +157,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="D4j-0J-ci0"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="downloads" id="aSU-a5-OPr"/>
+                    <tabBarItem key="tabBarItem" image="Icon_Tab5" id="aSU-a5-OPr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VIz-5N-OrG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3169" y="2434"/>
         </scene>
-        <!--My Tab Bar Controller-->
+        <!--Base Tab Bar Controller-->
         <scene sceneID="dZd-u5-RW3">
             <objects>
-                <tabBarController storyboardIdentifier="MenuTab" automaticallyAdjustsScrollViewInsets="NO" id="Ls7-il-NXb" customClass="myTabBarController" customModule="B_IBattle" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MenuTab" automaticallyAdjustsScrollViewInsets="NO" id="Ls7-il-NXb" customClass="BaseTabBarController" customModule="B_IBattle" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9LK-9M-wdY">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -189,4 +191,11 @@
             <point key="canvasLocation" x="2340" y="-19"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Icon_Tab1" width="26" height="26"/>
+        <image name="Icon_Tab2" width="26" height="25.5"/>
+        <image name="Icon_Tab3" width="60" height="60"/>
+        <image name="Icon_Tab4" width="26" height="26"/>
+        <image name="Icon_Tab5" width="26" height="26"/>
+    </resources>
 </document>
