--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -19,17 +19,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nS4-NM-Ewr">
-                                <rect key="frame" x="138.5" y="303.5" width="98.5" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Img_Friends" translatesAutoresizingMaskIntoConstraints="NO" id="vdX-yP-JtH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="N7L-Vb-gYV"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vs8-DK-14Y">
+                                <rect key="frame" x="0.0" y="250" width="375" height="368"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="66" id="M4c-rq-4lx" customClass="FriendsTableViewCell" customModule="B_IBattle" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="M4c-rq-4lx" id="qYL-Se-V43">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oWx-hn-0N9">
+                                                    <rect key="frame" x="15" y="9" width="46" height="46"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLK-RD-0Nr">
+                                                    <rect key="frame" x="79" y="9" width="45" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Descript" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwE-Jc-eqx">
+                                                    <rect key="frame" x="79" y="34" width="65" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qT-td-1fm">
+                                                    <rect key="frame" x="322" y="9" width="30" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="&gt;"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n55-TN-kBG">
+                                                    <rect key="frame" x="244" y="9" width="46" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Button"/>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="nS4-NM-Ewr" firstAttribute="centerX" secondItem="dwT-MH-Ce2" secondAttribute="centerX" id="JYJ-qJ-quM"/>
-                            <constraint firstItem="nS4-NM-Ewr" firstAttribute="centerY" secondItem="dwT-MH-Ce2" secondAttribute="centerY" id="OJ4-me-JVr"/>
+                            <constraint firstAttribute="trailing" secondItem="vdX-yP-JtH" secondAttribute="trailing" id="Eex-Tv-Bwl"/>
+                            <constraint firstItem="ryc-7g-jLr" firstAttribute="bottom" secondItem="vs8-DK-14Y" secondAttribute="bottom" id="S5F-Uv-J5G"/>
+                            <constraint firstItem="vs8-DK-14Y" firstAttribute="top" secondItem="vdX-yP-JtH" secondAttribute="bottom" id="SYt-F6-YxK"/>
+                            <constraint firstItem="ryc-7g-jLr" firstAttribute="trailing" secondItem="vs8-DK-14Y" secondAttribute="trailing" id="TIV-b7-Idm"/>
+                            <constraint firstItem="vdX-yP-JtH" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="XS2-cA-HJM"/>
+                            <constraint firstItem="vs8-DK-14Y" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="o9e-hu-q8P"/>
+                            <constraint firstItem="vdX-yP-JtH" firstAttribute="top" secondItem="dwT-MH-Ce2" secondAttribute="top" id="xGA-R6-0xz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ryc-7g-jLr"/>
                     </view>
@@ -39,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZY-Es-E4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3190" y="-388"/>
+            <point key="canvasLocation" x="3189.5999999999999" y="-388.15592203898052"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Nfq-eQ-bzl">
@@ -212,6 +261,7 @@
         <image name="Icon_Tab4_d" width="26" height="26"/>
         <image name="Icon_Tab5" width="26" height="26"/>
         <image name="Icon_Tab5_d" width="26" height="26"/>
+        <image name="Img_Friends" width="375" height="250"/>
         <image name="img_tabBg" width="375" height="49"/>
         <namedColor name="Color_TabbarBackgound">
             <color red="0.12941176470588237" green="0.73333333333333328" blue="0.015686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
